@@ -7974,3 +7974,6 @@ EPRINTS-3.1.2.1
 2009-05-28 tdb
  * Fixed an HTML insertion bug in the <title> element [Brian D. Gregg]
 
+2009-06-04 tdb
+ * Oracle needs VARCHAR2 ordervalues columns
+
